deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-docker-service
spec:
  type: NodePort
  selector:
    run: lab-docker
  ports:
    - name: primary
      protocol: TCP
      port: 5000
