deploy/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ecommerce
spec:
  # tls:
  # - secretName: tls
  rules:
  - host: ecommerce.containers.mybluemix.net
    http:
      paths:
      - path: /shopcarts
        backend:
          serviceName: shopcart-service
          servicePort: 5000
      - path: /catalog
        backend:
          serviceName: catalog-service
          servicePort: 5000
      - path: /orders
        backend:
          serviceName: order-service
          servicePort: 5000
      - path: /recommedations
        backend:
          serviceName: recommedation-service
          servicePort: 5000
